[gd_scene load_steps=11 format=3 uid="uid://b77y4p2jf1vb1"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_jwdw5"]
[ext_resource type="PackedScene" uid="uid://dficpwsu7ns6a" path="res://levels/present/slc/slc.gltf" id="1_udit2"]
[ext_resource type="PackedScene" uid="uid://dqicakipsq6eq" path="res://levels/level_bounds.tscn" id="10_hkt7d"]
[ext_resource type="Script" path="res://scripts/difficulty_range.gd" id="11_046gy"]
[ext_resource type="Script" path="res://scripts/signal_barrier.gd" id="12_w76t8"]
[ext_resource type="PackedScene" uid="uid://dvpbee1aireck" path="res://enemies/present/adam/adam.tscn" id="13_isd53"]
[ext_resource type="Script" path="res://enemies/spawners/staged_spawner.gd" id="13_tyxir"]
[ext_resource type="PackedScene" uid="uid://dcetufd2kgutc" path="res://music/level_music_player.tscn" id="14_q3rdv"]
[ext_resource type="AudioStream" uid="uid://drm11ek0ib4x8" path="res://music/futuristicBG_sound.mp3" id="15_n0q5f"]
[ext_resource type="Script" path="res://levels/collectible_spawner.gd" id="16_tvrck"]

[node name="SLC" node_paths=PackedStringArray("player_spawn_point") instance=ExtResource("1_udit2")]
script = ExtResource("1_jwdw5")
next_level = "res://levels/far_future/cerium/cerium.tscn"
player_spawn_point = NodePath("PlayerSpawnPoint")

[node name="StaticBody3D" parent="Cube_007" index="0"]
collision_mask = 0

[node name="Cube_001" parent="." index="2"]
collision_layer = 16
collision_mask = 0

[node name="Lights" type="Node3D" parent="." index="4"]

[node name="OmniLight3D" type="OmniLight3D" parent="Lights" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.72473, 1.90104)
light_energy = 2.0
light_size = 0.2
light_bake_mode = 1
shadow_enabled = true
omni_range = 7.5

[node name="OmniLight3D2" type="OmniLight3D" parent="Lights" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.07169, 3.725, 1.901)
light_energy = 2.0
light_size = 0.2
light_bake_mode = 1
shadow_enabled = true
omni_range = 7.5

[node name="OmniLight3D3" type="OmniLight3D" parent="Lights" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.072, 3.725, 1.901)
light_energy = 2.0
light_size = 0.2
light_bake_mode = 1
shadow_enabled = true
omni_range = 7.5

[node name="OmniLight3D4" type="OmniLight3D" parent="Lights" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.72473, -2.81405)
light_energy = 2.0
light_size = 0.2
light_bake_mode = 1
shadow_enabled = true
omni_range = 7.5

[node name="OmniLight3D5" type="OmniLight3D" parent="Lights" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.07169, 3.725, -2.81409)
light_energy = 2.0
light_size = 0.2
light_bake_mode = 1
shadow_enabled = true
omni_range = 7.5

[node name="OmniLight3D6" type="OmniLight3D" parent="Lights" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.072, 3.725, -2.81409)
light_energy = 2.0
light_size = 0.2
light_bake_mode = 1
shadow_enabled = true
omni_range = 7.5

[node name="OmniLight3D7" type="OmniLight3D" parent="Lights" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.196, 3.725, 0)
light_energy = 2.0
light_size = 0.2
light_bake_mode = 1
shadow_enabled = true
omni_range = 7.5

[node name="OmniLight3D8" type="OmniLight3D" parent="Lights" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.196, 3.725, 0)
light_energy = 2.0
light_size = 0.2
light_bake_mode = 1
shadow_enabled = true
omni_range = 7.5

[node name="LevelBounds" parent="." index="5" instance=ExtResource("10_hkt7d")]

[node name="DifficultyRange" type="Node3D" parent="." index="6"]
script = ExtResource("11_046gy")
max_difficulty = 0

[node name="SignalBarrier" type="Node" parent="DifficultyRange" index="0"]
script = ExtResource("12_w76t8")
barrier_count = 2

[node name="StagedSpawner2" type="Marker3D" parent="DifficultyRange" index="1" groups=["EnemySpawners"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.4186, 0, 2.28644)
script = ExtResource("13_tyxir")
scenes = Array[PackedScene]([ExtResource("13_isd53"), ExtResource("13_isd53")])

[node name="StagedSpawner3" type="Marker3D" parent="DifficultyRange" index="2" groups=["EnemySpawners"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.59486, 0, -1.98246)
script = ExtResource("13_tyxir")
scenes = Array[PackedScene]([ExtResource("13_isd53"), ExtResource("13_isd53")])

[node name="DifficultyRange2" type="Node3D" parent="." index="7"]
script = ExtResource("11_046gy")
min_difficulty = 1

[node name="SignalBarrier" type="Node" parent="DifficultyRange2" index="0"]
script = ExtResource("12_w76t8")
barrier_count = 4

[node name="StagedSpawner" type="Marker3D" parent="DifficultyRange2" index="1" groups=["EnemySpawners"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.2295, 0, -2.34422)
script = ExtResource("13_tyxir")
scenes = Array[PackedScene]([null, ExtResource("13_isd53")])

[node name="StagedSpawner2" type="Marker3D" parent="DifficultyRange2" index="2" groups=["EnemySpawners"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.4186, 0, 2.28644)
script = ExtResource("13_tyxir")
scenes = Array[PackedScene]([ExtResource("13_isd53"), ExtResource("13_isd53")])

[node name="StagedSpawner3" type="Marker3D" parent="DifficultyRange2" index="3" groups=["EnemySpawners"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.59486, 0, -1.98246)
script = ExtResource("13_tyxir")
scenes = Array[PackedScene]([ExtResource("13_isd53"), ExtResource("13_isd53")])

[node name="StagedSpawner4" type="Marker3D" parent="DifficultyRange2" index="4" groups=["EnemySpawners"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.27767, 0, 2.10141)
script = ExtResource("13_tyxir")
scenes = Array[PackedScene]([null, ExtResource("13_isd53")])

[node name="PlayerSpawnPoint" type="Marker3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.70156)

[node name="LevelMusicPlayer" parent="PlayerSpawnPoint" index="0" instance=ExtResource("14_q3rdv")]
stream = ExtResource("15_n0q5f")

[node name="CollectibleSpawner" type="Marker3D" parent="." index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.97819, 0.558934, 0)
script = ExtResource("16_tvrck")

[connection signal="level_complete" from="." to="CollectibleSpawner" method="spawn"]
[connection signal="passed" from="DifficultyRange/SignalBarrier" to="." method="_on_finished"]
[connection signal="finished" from="DifficultyRange/StagedSpawner2" to="DifficultyRange/SignalBarrier" method="receive"]
[connection signal="finished" from="DifficultyRange/StagedSpawner3" to="DifficultyRange/SignalBarrier" method="receive"]
[connection signal="passed" from="DifficultyRange2/SignalBarrier" to="." method="_on_finished"]
[connection signal="finished" from="DifficultyRange2/StagedSpawner" to="DifficultyRange2/SignalBarrier" method="receive"]
[connection signal="finished" from="DifficultyRange2/StagedSpawner2" to="DifficultyRange2/SignalBarrier" method="receive"]
[connection signal="finished" from="DifficultyRange2/StagedSpawner3" to="DifficultyRange2/SignalBarrier" method="receive"]
[connection signal="finished" from="DifficultyRange2/StagedSpawner4" to="DifficultyRange2/SignalBarrier" method="receive"]
[connection signal="collectible_collected" from="CollectibleSpawner" to="." method="_on_can_move_on"]
